target_sources(gqcp
    PRIVATE
        BaseOneElectronIntegralBuffer.hpp
        BaseOneElectronIntegralEngine.hpp
        BaseTwoElectronIntegralBuffer.hpp
        BaseTwoElectronIntegralEngine.hpp
        FunctionalPrimitiveEngine.hpp
        IntegralCalculator.hpp
        IntegralEngine.hpp
        McMurchieDavidsonCoefficient.hpp
        OneElectronIntegralBuffer.hpp
        OneElectronIntegralEngine.hpp
        PrimitiveAngularMomentumIntegralEngine.hpp
        PrimitiveCartesianOperatorIntegralEngine.hpp
        PrimitiveDipoleIntegralEngine.hpp
        PrimitiveKineticEnergyIntegralEngine.hpp
        PrimitiveLinearMomentumIntegralEngine.hpp
        PrimitiveOverlapIntegralEngine.hpp
)

add_subdirectory(Interfaces)
